--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,13 +6,13 @@
     "declaration": true,
     "outDir": "lib",
     "rootDir": "src",
-    "types": ["node"],
+    "types": ["jest","node"],
     "jsx": "react",
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "typeRoots": [
           "node_modules/@types"
-    ],
+    ]
   },
   "include": ["src"],
   "exclude": ["node_modules","lib"]
