--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,7 +1,8 @@
 name: npm-publish
 on:
-  release:
-    types: [published] # Edit this to change when (and for which branches) the action is triggered
+  push:
+    branches:
+    - master
 jobs:
   npm-publish:
     name: npm-publish
@@ -17,6 +18,9 @@ jobs:
       uses: pascalgn/npm-publish-action@51fdb4531e99aac1873764ef7271af448dc42ab4
       with: # All of theses inputs are optional
         tag_name: "v%s"
+        tag_name: "v%s"
+        tag_message: "v%s"
+        commit_pattern: "^Release (\\S+)"
       env: # More info about the environment variables in the README
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Leave this as is, it's automatically generated
         NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }} # You need to set this in your repo settings
