--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "genome-nexus-cli",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Genome Nexus Command Line Interface",
-  "main": "./lib/index.js",
+  "main": "./bin/genome-nexus",
   "repository": "https://github.com/genome-nexus/genome-nexus-cli",
   "author": "inodb",
   "license": "MIT",
