fix yarn publish
one day i'll learn how to read docs 📘

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -23,7 +23,6 @@ jobs:
     - uses: actions/setup-node@v1
       with:
         registry-url: 'https://npm.pkg.github.com'
-    - name: yarn publish to github
-      run: yarn publish --non-interactive
+    - run: yarn publish --non-interactive
       env:
         NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
