--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "n-readlines": "^1.0.0",
     "path": "^0.12.7",
     "request": "^2.88.0",
+    "root-require": "^0.3.1",
     "superagent": "^5.1.0"
   },
   "bin": {
