--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "genome-nexus-cli",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "Genome Nexus Command Line Interface",
   "main": "./bin/genome-nexus",
   "repository": "https://github.com/genome-nexus/genome-nexus-cli",
@@ -10,21 +10,18 @@
   "dependencies": {
     "@types/chalk": "^2.2.0",
     "@types/clear": "^0.1.0",
-    "@types/commander": "^2.12.2",
     "@types/figlet": "^1.2.0",
     "@types/line-reader": "^0.0.28",
-    "@types/superagent": "^4.1.3",
     "chalk": "^2.4.2",
     "clear": "^0.1.0",
-    "commander": "^3.0.2",
+    "commander": "^5.0.0",
     "figlet": "^1.2.4",
+    "genome-nexus-ts-api-client": "^1.1.2-beta.0",
     "inquirer": "^7.0.0",
     "line-reader": "^0.4.0",
     "lodash": "^4.17.15",
     "n-readlines": "^1.0.0",
-    "path": "^0.12.7",
-    "request": "^2.88.0",
-    "superagent": "^5.1.0"
+    "path": "^0.12.7"
   },
   "bin": {
     "genome-nexus": "./bin/genome-nexus",
@@ -46,14 +43,11 @@
   "scripts": {
     "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
     "create": "yarn run build && yarn run test",
-    "build": "tsc -p .",
+    "build": "tsc -p . && cp package.json lib/",
     "test": "jest",
     "refresh": "rm -rf ./node_modules ./yarn.lock && yarn install",
     "prettier": "prettier --config ./.prettierrc.js --write './src/**'",
     "test-prettier": "prettier --config ./.prettierrc.js -c './src/**'",
-    "test-run": "./bin/genome-nexus annotate 17:g.41242962_41242963insGA",
-    "fetchGenomeNexusAPI": "mkdir -p src/api/generated && export GENOME_NEXUS_URL=https://www.genomenexus.org && curl ${GENOME_NEXUS_URL}/v2/api-docs | json | grep -v basePath | grep -v termsOfService | grep -v host > src/api/generated/GenomeNexusAPI-docs.json && curl ${GENOME_NEXUS_URL}/v2/api-docs?group=internal | json | grep -v basePath | grep -v termsOfService | grep -v host > src/api/generated/GenomeNexusAPIInternal-docs.json",
-    "updateGenomeNexusAPI": "yarn run fetchGenomeNexusAPI && yarn run buildGenomeNexusAPI",
-    "buildGenomeNexusAPI": "node scripts/generate-api.js src/api/generated GenomeNexusAPI GenomeNexusAPIInternal"
+    "test-run": "./bin/genome-nexus annotate 17:g.41242962_41242963insGA"
   }
 }
