use yarn 1.21.1 (necessary for api client)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,12 @@ jobs:
     working_directory: ~/repo
 
     steps:
+    
+      - run:
+        name: "Install yarn at specific version"
+        command:
+          sudo npm install --global yarn@1.21.1
+
       - checkout
 
       # Download and cache dependencies
