Use originalVariantQuery for annotation
The genomicLocation can be altered in the response compared to the input
genomicLocation. This can show some genomic locations as not being
annotated when using POST requests. Use the originalVariantQuery
instead, which is always the same as the input.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clear": "^0.1.0",
     "commander": "^5.0.0",
     "figlet": "^1.2.4",
-    "genome-nexus-ts-api-client": "^1.1.2-beta.0",
+    "genome-nexus-ts-api-client": "^1.1.5",
     "inquirer": "^7.0.0",
     "line-reader": "^0.4.0",
     "lodash": "^4.17.15",
